--- a/summary.ipynb
+++ b/summary.ipynb
@@ -18,8 +18,11 @@
     "* This notebook provides a summary and overall analysis\n",
     "* The details for each one is are in individual notebooks:\n",
     "    * \"1_train_model_EfficientDet_D1\"\n",
+    "        * config: \"EfficientDet_D1_640x640.config\"\n",
     "    * \"1_train_model_ssd_resnet50_v1_fpn\"\n",
-    "    * \"1_train_model_ssd_mobilenet_v2_fpnlite\""
+    "        * config: \"ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.config\"\n",
+    "    * \"1_train_model_ssd_mobilenet_v2_fpnlite\"\n",
+    "        * \"ssd_mobilenet_v2_fpnlite_640x640_coco17_tpu-8.config\""
    ]
   },
   {
@@ -97,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "332b4ebc",
+   "id": "9017a32b",
    "metadata": {},
    "source": [
     "# Discussions\n",
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31f3186c",
+   "id": "c8ee1cd8",
    "metadata": {},
    "source": [
     "# Videos\n",
@@ -146,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94b2cb8d",
+   "id": "82e07cb8",
    "metadata": {},
    "outputs": [],
    "source": []
