--- a/summary.ipynb
+++ b/summary.ipynb
@@ -17,7 +17,7 @@
     "* For this work I trained 3 different models\n",
     "* This notebook provides a summary and overall analysis\n",
     "* The details for each one is are in individual notebooks:\n",
-    "    * \"1_train_model_EfficientDet_D1\"\n",
+    "    * \"[1_train_model_EfficientDet_D1](1_train_model_EfficientDet_D1.ipynb)\"\n",
     "        * config: \"EfficientDet_D1_640x640.config\"\n",
     "    * \"1_train_model_ssd_resnet50_v1_fpn\"\n",
     "        * config: \"ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.config\"\n",
