adding links to summary.ipynb

--- a/summary.ipynb
+++ b/summary.ipynb
@@ -18,11 +18,11 @@
     "* This notebook provides a summary and overall analysis\n",
     "* The details for each one is are in individual notebooks:\n",
     "    * \"[1_train_model_EfficientDet_D1](1_train_model_EfficientDet_D1.ipynb)\"\n",
-    "        * config: \"EfficientDet_D1_640x640.config\"\n",
-    "    * \"1_train_model_ssd_resnet50_v1_fpn\"\n",
-    "        * config: \"ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.config\"\n",
-    "    * \"1_train_model_ssd_mobilenet_v2_fpnlite\"\n",
-    "        * \"ssd_mobilenet_v2_fpnlite_640x640_coco17_tpu-8.config\""
+    "        * config: \"[EfficientDet_D1_640x640.config](EfficientDet_D1_640x640.config)\"\n",
+    "    * \"[1_train_model_ssd_resnet50_v1_fpn](1_train_model_ssd_resnet50_v1_fpn.ipynb)\"\n",
+    "        * config: \"[ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.config](ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.config)\"\n",
+    "    * \"[1_train_model_ssd_mobilenet_v2_fpnlite](1_train_model_ssd_mobilenet_v2_fpnlite.ipynb)\"\n",
+    "        * \"[ssd_mobilenet_v2_fpnlite_640x640_coco17_tpu-8.config](ssd_mobilenet_v2_fpnlite_640x640_coco17_tpu-8.config)\""
    ]
   },
   {
@@ -126,9 +126,9 @@
    "source": [
     "# Videos\n",
     "3 videos have been generated:\n",
-    "* \"EfficientDet_D1_output.avi\"\n",
-    "* \"ssd_resnet50_v1_fpn_output.avi\"\n",
-    "* \"ssd_mobilenet_v2_fpnlite_output.avi\""
+    "* \"[EfficientDet_D1_output.avi](EfficientDet_D1_output.avi)\"\n",
+    "* \"[ssd_resnet50_v1_fpn_output.avi](ssd_resnet50_v1_fpn_output.avi)\"\n",
+    "* \"[ssd_mobilenet_v2_fpnlite_output.avi](ssd_mobilenet_v2_fpnlite_output.avi)\""
    ]
   },
   {
