--- a/summary.ipynb
+++ b/summary.ipynb
@@ -22,7 +22,9 @@
     "    * \"[1_train_model_ssd_resnet50_v1_fpn](1_train_model_ssd_resnet50_v1_fpn.ipynb)\"\n",
     "        * config: \"[ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.config](ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.config)\"\n",
     "    * \"[1_train_model_ssd_mobilenet_v2_fpnlite](1_train_model_ssd_mobilenet_v2_fpnlite.ipynb)\"\n",
-    "        * \"[ssd_mobilenet_v2_fpnlite_640x640_coco17_tpu-8.config](ssd_mobilenet_v2_fpnlite_640x640_coco17_tpu-8.config)\""
+    "        * \"[ssd_mobilenet_v2_fpnlite_640x640_coco17_tpu-8.config](ssd_mobilenet_v2_fpnlite_640x640_coco17_tpu-8.config)\"\n"
+    "* There is one notebook for the deploy model:\n",
+    "    * config: \"[2_deploy_model_ssd_mobilenet_v2_fpnlite.ipynb](2_deploy_model_ssd_mobilenet_v2_fpnlite.ipynb)\""
    ]
   },
   {
